[NRRPLT-5074] Changes after first rehearsal
Change-Id: Id5aaaa79cdbd75315813552ff110708fc2a42d25

--- a/tutorial_baseball_exercise/tutorial_baseball.ipynb
+++ b/tutorial_baseball_exercise/tutorial_baseball.ipynb
@@ -97,6 +97,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Open your own notebook\n",
+    "\n",
+    "Close this notebook by closing this tab, then CTRL+C your cle-virtual-coach line in your terminal.\n",
+    "Go to your fresh experiment folder and launch jupyter from there"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 1: Setting up the experiment interactively\n",
     "\n",
     "Start the NRP with the following commands:\n",
@@ -117,9 +127,13 @@
     "\n",
     "## Brain editor - Read how the brain is defined \n",
     "\n",
-    "The PyNN script you read defines neuron populations. These are named on the top of the editor for use in the Transfer Functions.\n",
+    "The PyNN script you read defines neuron populations.\n",
     "In this experiment, the brain has 21 neurons and 2 populations. Population **sensors** defines sensory neurons, population **motors** motor neurons.\n",
+    "\n",
     "Open the **brain visualizer** to display your brain in 3D. Note that neuron positions are dynamically defined.\n",
+    "\n",
+    "Try to change n_sensors to 5000, apply and see the changes in **brain visualizer**.\n",
+    "Change it back to 20 and apply.\n",
     "\n",
     "## State Machine editor - Throwing balls\n",
     "\n",
@@ -149,7 +163,7 @@
     "## Transfer Functions editor - Converting vision to brain activity - Robot2Neuron \n",
     "\n",
     "The robot has a brain of 20 sensor neurons and one motor neuron, connected all to all.\n",
-    "You can see the **Brain Editor** in the **Transfer Functions** tab of the **NRP editors**. You can also visualize the neurons and their activity with the **brain visualizer** in the toolbar.\n",
+    "You can see the brain code in the **Brain Editor**. You can also visualize the neurons and their activity with the **brain visualizer** in the toolbar.\n",
     "\n",
     "We want the camera images sensed by the robot to activate the sensor neurons. For this purpose, we will use a **Robot2Neuron** transfer function. Go to the function **grab_image** and activate the sensor neurons with respect to the difference in green values.\n",
     "\n",
@@ -160,21 +174,10 @@
     "The input neurons should now spike with respect to the positive difference of green in images.\n",
     "We now want to make the robot arm swing with respect to the motor neuron activation. Implement the **Neuron2Robot** transfer function, here named **swing**.\n",
     "\n",
-    "## Monitors and Console - debug and monitor your simulation\n",
-    "\n",
-    "Play the simulation. Open the **spike monitor** to observe the brain activity when a ball is detected.\n",
-    "Open the **joint monitor** and observe the real time positions of the robot arm.\n",
-    "Go to the **Transfer Functions editor**, add a new Transfer Function. The default code is logging time data to the console. Use this code to log the **mean_green** variable in **grab_image**.\n",
-    "**Beware** to keep the **if** line else the console will log too much and this will result is performance issues. Delete the time logging **trasnferfunction_0**.\n",
-    "\n",
     "## Environment editor - build a nicer environment\n",
     "\n",
     "Open the **environment editor** and select **Furniture**. Add a ping pong trainer robot and place it approximately at the origin of the ball's trajectory (you might have to move the trainer below ground).\n",
     "Assemble enclosing walls using **Concrete Wall** and **Wood Wall** in **Construction**. You can use the **snap** option in the **object inspector** to move walls around and snap them to other wall parts.\n",
-    "\n",
-    "## Environment editor - blind the robot, add a green sphere\n",
-    "\n",
-    "\n",
     "\n",
     "## Save your work\n",
     "\n",
