[NRRPLT-5474] Add a comment about the green line. Update doc after rehearsal.
Change-Id: I83adf0eb92d620c6c022fdb5e7d3617232feeb51

--- a/tutorial_baseball_exercise/tutorial_baseball.ipynb
+++ b/tutorial_baseball_exercise/tutorial_baseball.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -67,40 +69,7 @@
    "source": [
     "# Getting Started\n",
     "\n",
-    "It is assumed that you followed the [local installation guide of the NRP](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform).\n",
-    "\n",
-    "All the configuration files and the python scripts specific to an experiment are located in the folder **Experiments/** (except the brain and the robot which are located in **Models/**). Let's make a copy of the tutorial:\n",
-    "\n",
-    "```bash\n",
-    "cd $HBP/Experiments/\n",
-    "cp -r tutorial_baseball_exercise my_first_experiment\n",
-    "cd my_first_experiment\n",
-    "mv ExDTutorialBaseballExercise.exc ExDMyFirstExperiment.exc\n",
-    "```\n",
-    "\n",
-    "The important files are:\n",
-    "* **tutorial_baseball.ipynb**: this notebook\n",
-    "* **ExDMyFirstExperiment.exc**: XML configuration of the experiment\n",
-    "* **tutorial_baseball.bibi**: XML configuration of the brain/body interaction\n",
-    "* **throw_ball.exd**: A state machine referenced in the **.exc**\n",
-    "* ***.py**: Transfer functions referenced in the **.bibi**\n",
-    "\n",
-    "Let's edit the **ExDMyFirstExperiment.exc** to change the name of the experiment:\n",
-    "```bash\n",
-    "sed -i \"s/<name>.*<\\/name>/<name>My First Experiment<\\/name>/g\" ExDMyFirstExperiment.exc\n",
-    "```\n",
-    "\n",
-    "In the following exercises, we will edit the transfer functions and state machine through the Neurorobotics Platform editors. If you want to persist your edits, make sure to **download** your modified code to the respective files in the  **my_first_experiment/** folder."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Open your own notebook\n",
-    "\n",
-    "Close this notebook by closing this tab, then CTRL+C your cle-virtual-coach line in your terminal.\n",
-    "Go to your fresh experiment folder and launch jupyter from there"
+    "Please visit this tutorials's manualpage at https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/1.2/nrp/tutorials/baseball/index.html"
    ]
   },
   {
@@ -179,11 +148,9 @@
     "Open the **environment editor** and select **Furniture**. Add a ping pong trainer robot and place it approximately at the origin of the ball's trajectory (you might have to move the trainer below ground).\n",
     "Assemble enclosing walls using **Concrete Wall** and **Wood Wall** in **Construction**. You can use the **snap** option in the **object inspector** to move walls around and snap them to other wall parts.\n",
     "\n",
-    "## Save your work\n",
+    "## Stop your simulation\n",
     "\n",
-    "Reopen the **Transfer Functions** and **State Machine** editors and download the code to your experiment's folder. Replace files that are already there.\n",
-    "Unfortunately, environment changes can not be saved and reloaded for now.\n",
-    "\n"
+    "Click on the stop button to close the simulation. You do not need to save your changes since we will start from a fresh copy in the next exercise.\n"
    ]
   },
   {
@@ -203,9 +170,11 @@
     "pip install --user pandas matplotlib\n",
     "```\n",
     "\n",
-    "Let's import the **Virtual Coach**. Make sure you started your jupyter notebook with the command\n",
-    "```bash\n",
-    "cle-virtual-coach jupyter notebook\n",
+    "Copy the bibi and transfer function files as well as the state machine code from the solution folder.\n",
+    "```\n",
+    "cd $HBP/Experiments/my_first_experiment\n",
+    "cp ../tutorial_baseball_solution/*.py .\n",
+    "cp ../tutorial_baseball_solution/*.exd .\n",
     "```"
    ]
   },
