[NRRPLT-5267] Rewording and fixed typos
Change-Id: I3426c9b05b87eeb73fc8fa7166c6ece043ad771a

--- a/multiple_robots_tutorial/multiple_robots_tutorial.ipynb
+++ b/multiple_robots_tutorial/multiple_robots_tutorial.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Welcome to this turorial. By following this notebook step by step, you will learn how to work with the Neurorobotics Platform.\n",
     "\n",
-    "The following notebook will guide you through setting up an experiment interactively. The experiment involves processing sensory inputs, camera images and laser scans, that will feed small neural networks. Networks responses will be turned into motor commands so as to get some desired behaviours, namely color recognition and obstacle avoidance."
+    "The following notebook will guide you through setting up an experiment interactively. The experiment involves processing sensory inputs, namely camera images and laser scans. These inputs will feed small neural networks. Networks responses will be turned into motor commands so as to get some desired behaviours, namely color recognition and obstacle avoidance."
    ]
   },
   {
@@ -23,10 +23,10 @@
     "cle-start\n",
     "cle-frontend\n",
     "```\n",
-    "and launch the experiment **multiple Robots Tutorial**.\n",
+    "and launch the experiment **Multiple Robots Tutorial**.\n",
     "The experiment contains an iCub Robot (humanoid robot) and two Pioneer 3DX robots (two-wheeled robots) in an empty world. \n",
     "\n",
-    "Click the play button. You should see two motionless Pioneer 3DX robots and a still iCub robot.\n",
+    "Click on the play button. You should see two motionless Pioneer 3DX robots and a still iCub robot.\n",
     "\n",
     "Press the eye icon of the toolbar: you should see what the iCub sees.\n",
     "\n",
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
