[hotfix] minor fixes in the baseball tutorial exercise
Change-Id: I5013b627643662b78a8f58f47c13ecf7b855f445

--- a/tutorial_baseball_exercise/tutorial_baseball.ipynb
+++ b/tutorial_baseball_exercise/tutorial_baseball.ipynb
@@ -45,7 +45,7 @@
     "cle-start\n",
     "cle-frontend\n",
     "```\n",
-    "and launch the experiment **My First Experiment** that you just created.\n",
+    "and clone and launch the experiment **Tutorial baseball experiment - Exercise**.\n",
     "\n",
     "The experiment contains an iCub Robot in an empty world. Click the play button, nothing happens.\n",
     "We will now implement the components one by one to have our iCub playing baseball controlled by a spiking neural network.\n",
@@ -70,7 +70,7 @@
     "The first step is to have a ball throwing machine. Since this concerns purely the environment and not the robot, we implement this in a **state machine**.\n",
     "\n",
     "Open the **NRP editors** (pen button in the toolbar), and select the **State Machine (SMACH)** tab.\n",
-    "Two **States** are defined: one to spawn new ball, the other to remove them when they are too low.\n",
+    "Two **States** are defined: one to spawn a new ball, the other to remove the ball when it falls beyond a certain height.\n",
     "\n",
     "Complete the code where you find the comments\n",
     "```py\n",
@@ -79,16 +79,17 @@
     "#################################################\n",
     "```\n",
     "\n",
-    "Don't forget to click the **Apply** button and **start** the experiment if necessary.\n",
+    "Don't forget to click the **Apply** button and **start** the experiment if necessary. Also, click the **Save** button to save your changes in the state machine. That way, your changes won't get lost if the experiment was stopped and relaunched.\n",
     "\n",
     "## Transfer Functions editor - Moving the robot to a pre-swing pose - Neuron2Robot \n",
     "\n",
     "You should now have an experiment with balls that are being spawned and thrown in the direction of the iCub. We will first move the iCub to a proper swinging position. Since this concerns purely the robot, we implement this in a **transfer function (TF)**. \n",
     "\n",
-    "Open the **NRP editors** again and select the **Transfer Functions** tab. Every function defined here are called at regular 20ms intervals.\n",
+    "Open the **NRP editors** again and select the **Transfer Functions** tab. Every function defined here is called at regular 20ms intervals.\n",
     "\n",
-    "Start with the function **simple_move_robot**. This is a **Neuron2Robot** TF but does not listen to any brain neuron - it simply send motor commands to the robot in open loop.\n",
+    "Start with the function **simple_move_robot**. This is a **Neuron2Robot** TF but does not listen to any brain neuron - it simply sends motor commands to the robot in open loop.\n",
     "Move the arm of the robot so that its hand hits the thrown balls.\n",
+    "When you're done, click the **Save** button to save your changes in the TF.\n",
     "\n",
     "## Transfer Functions editor - Converting vision to brain activity - Robot2Neuron \n",
     "\n",
@@ -96,13 +97,15 @@
     "You can see the brain code in the **Brain Editor**. You can also visualize the neurons and their activity with the **brain visualizer** in the toolbar.\n",
     "\n",
     "We want the camera images sensed by the robot to activate the sensor neurons. For this purpose, we will use a **Robot2Neuron** transfer function. Go to the function **grab_image** and activate the sensor neurons with respect to the difference in green values.\n",
+    "When you're done, click the **Save** button to save your changes in the TF.\n",
     "\n",
-    "You can see what the robot see with the **generic image viewer** and the brain activity of a neuronal population with the **spiketrain**. The population displayed is defined in the **NeuronMonitor** transfer function and is set to the sensors population initially.\n",
+    "You can see what the robot sees with the **generic image viewer** and the brain activity of a neuronal population with the **spiketrain**. The population displayed is defined in the **NeuronMonitor** transfer function and is set to the sensors population initially.\n",
     "\n",
     "## Transfer Functions editor - Converting brain activity to action - Neuron2Robot \n",
     "\n",
     "The input neurons should now spike with respect to the positive difference of green in images.\n",
     "We now want to make the robot arm swing with respect to the motor neuron activation. Implement the **Neuron2Robot** transfer function, here named **swing**.\n",
+    "When you're done, click the **Save** button to save your changes in the TF.\n",
     "\n",
     "## Environment editor - build a nicer environment\n",
     "\n",
@@ -131,7 +134,7 @@
     "pip install --user pandas matplotlib\n",
     "```\n",
     "\n",
-    "The first step is to clone our own copy of the experiment so that we can modify the"
+    "We will launch the same experiment you were modifying in Exercise 1."
    ]
   },
   {
@@ -171,17 +174,6 @@
     "## First steps with the Virtual Coach\n",
     "\n",
     "The virtual coach launch experiments return a well-documented simulation object with which you can interact:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "vc.clone_experiment_to_storage('ExDTutorialBaseballExercise')"
    ]
   },
   {
@@ -289,7 +281,7 @@
     "### The (additional) transfer function\n",
     "\n",
     "To record data from the experiment, we add a special type of transfer functions: **MapCSVRecorder**..\n",
-    "You could also add this transfer functions as a python file in the **Experiments/my_first_experiment** folder and reference it in the **.bibi**, the results would be identical."
+    "You could also add this transfer functions as a python file in the cloned experiment's directory **$HOME/.opt/nrpStorage/tutorial_baseball_exercise_0** and reference it in the **.bibi**, the results would be identical."
    ]
   },
   {
@@ -340,8 +332,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sim.get_csv_data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "import csv\n",
     "import tempfile\n",
+    "import time\n",
     "import os\n",
     "\n",
     "# this name has to match the name passed in the CSV transfer function\n",
@@ -362,14 +366,13 @@
     "def make_on_status(sim, datadir):\n",
     "    def on_status(msg):\n",
     "        print(\"Current simulation time: {}\".format(msg['simulationTime']))\n",
-    "        if msg['simulationTime'] == 5.0 and sim.get_state() is not 'stopped':\n",
+    "        if msg['simulationTime'] == 5.0 and sim.get_state() == 'started':\n",
     "            #################################################\n",
     "            # Insert code here:\n",
     "            # 1) pause the simulation, \n",
     "            # 2) save the CSV file\n",
-    "            # 3) stop the simulation \n",
+    "            # 3) stop the simulation\n",
     "            #################################################\n",
-    "            save_position_csv(sim, datadir)\n",
     "            print(\"Trial terminated - saved CSV in {}\".format(datadir))\n",
     "            \n",
     "    return on_status\n",
@@ -385,7 +388,6 @@
     "    #################################################\n",
     "    brain_file = brain_template.format(**brain_params)\n",
     "    \n",
-    "    sim.start()\n",
     "    return sim\n",
     "    \n",
     "tmp_folder = tempfile.mkdtemp()\n",
@@ -428,11 +430,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
-    "ball_csv = pandas.read_csv(csv_file)\n",
+    "ball_csv = pandas.read_csv(csv_file)[['Time', 'px', 'py', 'pz']]\n",
     "ball_csv"
    ]
   },
@@ -486,7 +490,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "n_trials = 10\n",
+    "n_trials = 2\n",
     "trial_weights = np.linspace(0., 1.5, n_trials)\n",
     "trial_ball_csv = [tempfile.mkdtemp() for i in range(n_trials)]\n",
     "#################################################\n",
@@ -494,7 +498,7 @@
     "# 1) run the experiments with all the trial_weights\n",
     "# 2) compute the fitness of each trial\n",
     "# 3) plot your results\n",
-    "#################################################"
+    "#################################################\n"
    ]
   },
   {
